--- a/Dockerfile.simple
+++ b/Dockerfile.simple
@@ -18,11 +18,6 @@ COPY . .
 # Create necessary directories
 RUN mkdir -p uploads logs
 
-# Fix line endings and make entrypoint script executable
-RUN sed -i 's/\r$//' docker-entrypoint.sh && \
-    chmod +x docker-entrypoint.sh && \
-    ls -la docker-entrypoint.sh
-
 # Expose port
 EXPOSE 3001
 
@@ -30,5 +25,5 @@ EXPOSE 3001
 HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
   CMD curl -f http://localhost:3001/ || exit 1
 
-# Use entrypoint script
-ENTRYPOINT ["./docker-entrypoint.sh"]
+# Start the application directly (no entrypoint script)
+CMD ["node", "server.js"]
