--- a/env.example
+++ b/env.example
@@ -1,7 +1,7 @@
-# MongoDB Local Configuration (cho Docker)
+# MongoDB Local Configuration
 MONGODB_URI=mongodb://localhost:27017/OrderDetailing
 
-# MongoDB Local Configuration (cho chạy trực tiếp trên máy)
+# MongoDB Local Configuration
 # MONGODB_URI=mongodb://localhost:27017/OrderDetailing
 
 # MongoDB Remote Configuration (cho máy khác kết nối tới server)
@@ -16,3 +16,12 @@ PORT=3001
 
 # Environment
 NODE_ENV=development
+
+# ERPNext Configuration
+# Lưu ý khi chạy trong Docker:
+# - Nếu ERPNext chạy trên máy host: dùng host.docker.internal (Windows/Mac) hoặc IP máy host (Linux)
+# - Nếu ERPNext chạy trong Docker: dùng tên service hoặc IP container
+# - Nếu chạy trực tiếp (không Docker): dùng localhost
+ERPNEXT_URL=http://host.docker.internal:8080
+ERPNEXT_API_KEY=7da6579c83ee8ff
+ERPNEXT_API_SECRET=406e4001191ddc0
